[gd_scene load_steps=10 format=3]

[ext_resource type="PackedScene" path="res://scenes/actors/player.tscn" id="1_pl"]
[ext_resource type="Script" path="res://scripts/systems/game_flow.gd" id="2_flow"]
[ext_resource type="Script" path="res://scripts/systems/quest_system.gd" id="3_q"]
[ext_resource type="Script" path="res://scripts/systems/loot_system.gd" id="4_l"]
[ext_resource type="Script" path="res://scripts/systems/economy_system.gd" id="5_e"]
[ext_resource type="Script" path="res://scripts/systems/ranked_system.gd" id="6_r"]
[ext_resource type="Script" path="res://scripts/systems/leaderboard_system.gd" id="7_lb"]
[ext_resource type="Script" path="res://scripts/systems/navigation_system.gd" id="8_nav"]

[node name="OrderHall" type="Node3D"]

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]

[node name="CameraRig" type="Node3D" parent="."]
script = ExtResource("8_nav")
camera_path = NodePath("Camera3D")

[node name="Camera3D" type="Camera3D" parent="CameraRig"]
position = Vector3(0, 18, 14)
current = true

[node name="Player" parent="." instance=ExtResource("1_pl")]
position = Vector3(0, 0, 0)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
rotation = Vector3(-0.8, -0.8, 0)

[node name="GameFlow" type="Node" parent="."]
script = ExtResource("2_flow")

[node name="QuestSystem" type="Node" parent="GameFlow"]
script = ExtResource("3_q")

[node name="LootSystem" type="Node" parent="GameFlow"]
script = ExtResource("4_l")

[node name="EconomySystem" type="Node" parent="GameFlow"]
script = ExtResource("5_e")

[node name="RankedSystem" type="Node" parent="GameFlow"]
script = ExtResource("6_r")

[node name="LeaderboardSystem" type="Node" parent="GameFlow"]
script = ExtResource("7_lb")
